implement canceling of document loader if cache is invalidated during loading